# rssto

./: .gitignore  Cargo.toml  README.md
config/: example.toml
src/: argument.rs  config.rs  debug.rs  format.rs  main.rs  target.rs  time.rs
template/gmi/: index.gmi
template/gmi/index/: item.gmi
template/html/: index.html
template/html/index/: item.html
